# Learnify

./: .env.example  Dockerfile  README.md  data.json  docker-compose.yml  dumpdata.json  pyproject.toml
learnify/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
lms/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_alter_lesson_course.py  0004_alter_lesson_course.py  0005_alter_lesson_course.py  0006_course_owner_lesson_owner.py  0007_alter_course_options_alter_lesson_options.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options.py  0004_alter_payment_course_alter_payment_lesson_and_more.py  0005_subscription.py  0006_remove_payment_pay_day_remove_payment_pay_method_and_more.py  0007_payment_paid.py  0008_remove_payment_paid_alter_payment_user.py
